--- a/03.01.22/index.html
+++ b/03.01.22/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Coś2</p>
-    <p>Coś3</p>
-    <p>Lewy</p>
-    <p>Prawy</p>
-    <p>Dół</p>
+    <p id="something-2">Coś2</p>
+    <p id="something-3">Coś3</p>
+    <div id="container">
+        <p id="left">Lewy</p>
+        <p id="right">Prawy</p>
+    </div>
+    <p id="footer">Dół</p>
 
     <script src="script.js"></script>
 </body>
